[2 9] update cwiczenie2_pandas.ipynb

--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -673,7 +673,7 @@
     }
    },
    "cell_type": "code",
-   "source": "data.loc[\"Warszwa\"] > 10 # wyciagnęlismy pojedynczy wiersz",
+   "source": "data.loc[\"Warszwa\"] > 10  # wyciagnęlismy pojedynczy wiersz",
    "id": "994533ad5a541334",
    "outputs": [
     {
@@ -691,6 +691,315 @@
     }
    ],
    "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:48:23.369846Z",
+     "start_time": "2025-11-18T09:48:23.353140Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = pd.read_csv('AAPL_stock_price_example.csv')",
+   "id": "b693052309eb34af",
+   "outputs": [],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:48:32.205291Z",
+     "start_time": "2025-11-18T09:48:32.196021Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df",
+   "id": "7ebf99020172a76c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "           Date       Close\n",
+       "0    2019-01-02  157.919998\n",
+       "1    2019-01-03  142.190002\n",
+       "2    2019-01-04  148.259995\n",
+       "3    2019-01-07  147.929993\n",
+       "4    2019-01-08  150.750000\n",
+       "..          ...         ...\n",
+       "224  2019-11-20  263.190002\n",
+       "225  2019-11-21  262.010010\n",
+       "226  2019-11-22  261.779999\n",
+       "227  2019-11-25  266.369995\n",
+       "228  2019-11-26  264.290009\n",
+       "\n",
+       "[229 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>157.919998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>142.190002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>148.259995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-01-07</td>\n",
+       "      <td>147.929993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-01-08</td>\n",
+       "      <td>150.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>2019-11-20</td>\n",
+       "      <td>263.190002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>2019-11-21</td>\n",
+       "      <td>262.010010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>2019-11-22</td>\n",
+       "      <td>261.779999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227</th>\n",
+       "      <td>2019-11-25</td>\n",
+       "      <td>266.369995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>2019-11-26</td>\n",
+       "      <td>264.290009</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>229 rows × 2 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:49:20.879063Z",
+     "start_time": "2025-11-18T09:49:20.863422Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.describe()  # opis danych",
+   "id": "fadccb46760cbea3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "            Close\n",
+       "count  229.000000\n",
+       "mean   201.477598\n",
+       "std     28.246961\n",
+       "min    142.190002\n",
+       "25%    182.539993\n",
+       "50%    200.720001\n",
+       "75%    213.279999\n",
+       "max    267.100006"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>229.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>201.477598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>28.246961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>142.190002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>182.539993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>200.720001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>213.279999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>267.100006</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:51:52.801464Z",
+     "start_time": "2025-11-18T09:51:47.135173Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!pip install openpyxl # musi być doinstalowana by Pandas zapisałaplik xlsx",
+   "id": "11df1cd608b58662",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   -------------------- ------------------- 1/2 [openpyxl]\n",
+      "   ---------------------------------------- 2/2 [openpyxl]\n",
+      "\n",
+      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.1.1 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:52:10.390753Z",
+     "start_time": "2025-11-18T09:52:09.855417Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.to_excel(\"dane_akcje.xlsx\", index=False)  # index=False - wyłacza kolumne z indeksem",
+   "id": "8bee98da85cd1067",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T09:56:25.376667Z",
+     "start_time": "2025-11-18T09:56:25.326953Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import pandas as pd",
+   "id": "eaf7a39374cfb51d",
+   "outputs": [],
+   "execution_count": 23
   }
  ],
  "metadata": {
