--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -2593,12 +2593,318 @@
    "execution_count": 38
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:15:32.195596Z",
+     "start_time": "2025-11-18T10:15:32.143341Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "8cdbe86e8d588df"
+   "source": "movies_db.drop_duplicates(subset=[\"Director\"]) # usuniecie gdy dane w kolumnie się powtarzają",
+   "id": "8cdbe86e8d588df",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                Rank                     Genre  \\\n",
+       "Title                                                            \n",
+       "Guardians of the Galaxy            1   Action,Adventure,Sci-Fi   \n",
+       "Prometheus                         2  Adventure,Mystery,Sci-Fi   \n",
+       "Split                              3           Horror,Thriller   \n",
+       "Sing                               4   Animation,Comedy,Family   \n",
+       "Suicide Squad                      5  Action,Adventure,Fantasy   \n",
+       "...                              ...                       ...   \n",
+       "Underworld: Rise of the Lycans   991  Action,Adventure,Fantasy   \n",
+       "Taare Zameen Par                 992        Drama,Family,Music   \n",
+       "Project X                        995                    Comedy   \n",
+       "Secret in Their Eyes             996       Crime,Drama,Mystery   \n",
+       "Search Party                     999          Adventure,Comedy   \n",
+       "\n",
+       "                                                                      Description  \\\n",
+       "Title                                                                               \n",
+       "Guardians of the Galaxy         A group of intergalactic criminals are forced ...   \n",
+       "Prometheus                      Following clues to the origin of mankind, a te...   \n",
+       "Split                           Three girls are kidnapped by a man with a diag...   \n",
+       "Sing                            In a city of humanoid animals, a hustling thea...   \n",
+       "Suicide Squad                   A secret government agency recruits some of th...   \n",
+       "...                                                                           ...   \n",
+       "Underworld: Rise of the Lycans  An origins story centered on the centuries-old...   \n",
+       "Taare Zameen Par                An eight-year-old boy is thought to be a lazy ...   \n",
+       "Project X                       3 high school seniors throw a birthday party t...   \n",
+       "Secret in Their Eyes            A tight-knit team of rising investigators, alo...   \n",
+       "Search Party                    A pair of friends embark on a mission to reuni...   \n",
+       "\n",
+       "                                            Director  \\\n",
+       "Title                                                  \n",
+       "Guardians of the Galaxy                   James Gunn   \n",
+       "Prometheus                              Ridley Scott   \n",
+       "Split                             M. Night Shyamalan   \n",
+       "Sing                            Christophe Lourdelet   \n",
+       "Suicide Squad                             David Ayer   \n",
+       "...                                              ...   \n",
+       "Underworld: Rise of the Lycans    Patrick Tatopoulos   \n",
+       "Taare Zameen Par                          Aamir Khan   \n",
+       "Project X                            Nima Nourizadeh   \n",
+       "Secret in Their Eyes                       Billy Ray   \n",
+       "Search Party                          Scot Armstrong   \n",
+       "\n",
+       "                                                                           Actors  \\\n",
+       "Title                                                                               \n",
+       "Guardians of the Galaxy         Chris Pratt, Vin Diesel, Bradley Cooper, Zoe S...   \n",
+       "Prometheus                      Noomi Rapace, Logan Marshall-Green, Michael Fa...   \n",
+       "Split                           James McAvoy, Anya Taylor-Joy, Haley Lu Richar...   \n",
+       "Sing                            Matthew McConaughey,Reese Witherspoon, Seth Ma...   \n",
+       "Suicide Squad                   Will Smith, Jared Leto, Margot Robbie, Viola D...   \n",
+       "...                                                                           ...   \n",
+       "Underworld: Rise of the Lycans  Rhona Mitra, Michael Sheen, Bill Nighy, Steven...   \n",
+       "Taare Zameen Par                Darsheel Safary, Aamir Khan, Tanay Chheda, Sac...   \n",
+       "Project X                       Thomas Mann, Oliver Cooper, Jonathan Daniel Br...   \n",
+       "Secret in Their Eyes            Chiwetel Ejiofor, Nicole Kidman, Julia Roberts...   \n",
+       "Search Party                    Adam Pally, T.J. Miller, Thomas Middleditch,Sh...   \n",
+       "\n",
+       "                                Year  Runtime (Minutes)  Rating   Votes  \\\n",
+       "Title                                                                     \n",
+       "Guardians of the Galaxy         2014                121     8.1  757074   \n",
+       "Prometheus                      2012                124     7.0  485820   \n",
+       "Split                           2016                117     7.3  157606   \n",
+       "Sing                            2016                108     7.2   60545   \n",
+       "Suicide Squad                   2016                123     6.2  393727   \n",
+       "...                              ...                ...     ...     ...   \n",
+       "Underworld: Rise of the Lycans  2009                 92     6.6  129708   \n",
+       "Taare Zameen Par                2007                165     8.5  102697   \n",
+       "Project X                       2012                 88     6.7  164088   \n",
+       "Secret in Their Eyes            2015                111     6.2   27585   \n",
+       "Search Party                    2014                 93     5.6    4881   \n",
+       "\n",
+       "                                Revenue (Millions)  Metascore  \n",
+       "Title                                                          \n",
+       "Guardians of the Galaxy                     333.13       76.0  \n",
+       "Prometheus                                  126.46       65.0  \n",
+       "Split                                       138.12       62.0  \n",
+       "Sing                                        270.32       59.0  \n",
+       "Suicide Squad                               325.02       40.0  \n",
+       "...                                            ...        ...  \n",
+       "Underworld: Rise of the Lycans               45.80       44.0  \n",
+       "Taare Zameen Par                              1.20       42.0  \n",
+       "Project X                                    54.72       48.0  \n",
+       "Secret in Their Eyes                           NaN       45.0  \n",
+       "Search Party                                   NaN       22.0  \n",
+       "\n",
+       "[644 rows x 11 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Actors</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Runtime (Minutes)</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Votes</th>\n",
+       "      <th>Revenue (Millions)</th>\n",
+       "      <th>Metascore</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Guardians of the Galaxy</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Action,Adventure,Sci-Fi</td>\n",
+       "      <td>A group of intergalactic criminals are forced ...</td>\n",
+       "      <td>James Gunn</td>\n",
+       "      <td>Chris Pratt, Vin Diesel, Bradley Cooper, Zoe S...</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>121</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>757074</td>\n",
+       "      <td>333.13</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Prometheus</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Adventure,Mystery,Sci-Fi</td>\n",
+       "      <td>Following clues to the origin of mankind, a te...</td>\n",
+       "      <td>Ridley Scott</td>\n",
+       "      <td>Noomi Rapace, Logan Marshall-Green, Michael Fa...</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>124</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>485820</td>\n",
+       "      <td>126.46</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Split</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Horror,Thriller</td>\n",
+       "      <td>Three girls are kidnapped by a man with a diag...</td>\n",
+       "      <td>M. Night Shyamalan</td>\n",
+       "      <td>James McAvoy, Anya Taylor-Joy, Haley Lu Richar...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>117</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>157606</td>\n",
+       "      <td>138.12</td>\n",
+       "      <td>62.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sing</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Animation,Comedy,Family</td>\n",
+       "      <td>In a city of humanoid animals, a hustling thea...</td>\n",
+       "      <td>Christophe Lourdelet</td>\n",
+       "      <td>Matthew McConaughey,Reese Witherspoon, Seth Ma...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>108</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>60545</td>\n",
+       "      <td>270.32</td>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suicide Squad</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Action,Adventure,Fantasy</td>\n",
+       "      <td>A secret government agency recruits some of th...</td>\n",
+       "      <td>David Ayer</td>\n",
+       "      <td>Will Smith, Jared Leto, Margot Robbie, Viola D...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>123</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>393727</td>\n",
+       "      <td>325.02</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Underworld: Rise of the Lycans</th>\n",
+       "      <td>991</td>\n",
+       "      <td>Action,Adventure,Fantasy</td>\n",
+       "      <td>An origins story centered on the centuries-old...</td>\n",
+       "      <td>Patrick Tatopoulos</td>\n",
+       "      <td>Rhona Mitra, Michael Sheen, Bill Nighy, Steven...</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>92</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>129708</td>\n",
+       "      <td>45.80</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Taare Zameen Par</th>\n",
+       "      <td>992</td>\n",
+       "      <td>Drama,Family,Music</td>\n",
+       "      <td>An eight-year-old boy is thought to be a lazy ...</td>\n",
+       "      <td>Aamir Khan</td>\n",
+       "      <td>Darsheel Safary, Aamir Khan, Tanay Chheda, Sac...</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>165</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>102697</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Project X</th>\n",
+       "      <td>995</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>3 high school seniors throw a birthday party t...</td>\n",
+       "      <td>Nima Nourizadeh</td>\n",
+       "      <td>Thomas Mann, Oliver Cooper, Jonathan Daniel Br...</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>88</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>164088</td>\n",
+       "      <td>54.72</td>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Secret in Their Eyes</th>\n",
+       "      <td>996</td>\n",
+       "      <td>Crime,Drama,Mystery</td>\n",
+       "      <td>A tight-knit team of rising investigators, alo...</td>\n",
+       "      <td>Billy Ray</td>\n",
+       "      <td>Chiwetel Ejiofor, Nicole Kidman, Julia Roberts...</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>111</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>27585</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Search Party</th>\n",
+       "      <td>999</td>\n",
+       "      <td>Adventure,Comedy</td>\n",
+       "      <td>A pair of friends embark on a mission to reuni...</td>\n",
+       "      <td>Scot Armstrong</td>\n",
+       "      <td>Adam Pally, T.J. Miller, Thomas Middleditch,Sh...</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>93</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>4881</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>644 rows × 11 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 39
   }
  ],
  "metadata": {
