[2 18] update cwiczenie2_pandas.ipynb

--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -3903,6 +3903,200 @@
     }
    ],
    "execution_count": 49
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:32:03.746457Z",
+     "start_time": "2025-11-18T10:32:03.621749Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "movies_db.columns = [col.lower() for col in movies_db]\n",
+    "movies_db.tail()  # 5 ostatnich"
+   ],
+   "id": "16ef6207a482f184",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                        rank                  genre  \\\n",
+       "Title                                                 \n",
+       "Secret in Their Eyes     996    Crime,Drama,Mystery   \n",
+       "Hostel: Part II          997                 Horror   \n",
+       "Step Up 2: The Streets   998    Drama,Music,Romance   \n",
+       "Search Party             999       Adventure,Comedy   \n",
+       "Nine Lives              1000  Comedy,Family,Fantasy   \n",
+       "\n",
+       "                                                              description  \\\n",
+       "Title                                                                       \n",
+       "Secret in Their Eyes    A tight-knit team of rising investigators, alo...   \n",
+       "Hostel: Part II         Three American college students studying abroa...   \n",
+       "Step Up 2: The Streets  Romantic sparks occur between two dance studen...   \n",
+       "Search Party            A pair of friends embark on a mission to reuni...   \n",
+       "Nine Lives              A stuffy businessman finds himself trapped ins...   \n",
+       "\n",
+       "                                director  \\\n",
+       "Title                                      \n",
+       "Secret in Their Eyes           Billy Ray   \n",
+       "Hostel: Part II                 Eli Roth   \n",
+       "Step Up 2: The Streets        Jon M. Chu   \n",
+       "Search Party              Scot Armstrong   \n",
+       "Nine Lives              Barry Sonnenfeld   \n",
+       "\n",
+       "                                                                   actors  \\\n",
+       "Title                                                                       \n",
+       "Secret in Their Eyes    Chiwetel Ejiofor, Nicole Kidman, Julia Roberts...   \n",
+       "Hostel: Part II         Lauren German, Heather Matarazzo, Bijou Philli...   \n",
+       "Step Up 2: The Streets  Robert Hoffman, Briana Evigan, Cassie Ventura,...   \n",
+       "Search Party            Adam Pally, T.J. Miller, Thomas Middleditch,Sh...   \n",
+       "Nine Lives              Kevin Spacey, Jennifer Garner, Robbie Amell,Ch...   \n",
+       "\n",
+       "                        year  runtime  rating  votes  revenue (millions)  \\\n",
+       "Title                                                                      \n",
+       "Secret in Their Eyes    2015      111     6.2  27585                 NaN   \n",
+       "Hostel: Part II         2007       94     5.5  73152               17.54   \n",
+       "Step Up 2: The Streets  2008       98     6.2  70699               58.01   \n",
+       "Search Party            2014       93     5.6   4881                 NaN   \n",
+       "Nine Lives              2016       87     5.3  12435               19.64   \n",
+       "\n",
+       "                        metascore  \n",
+       "Title                              \n",
+       "Secret in Their Eyes         45.0  \n",
+       "Hostel: Part II              46.0  \n",
+       "Step Up 2: The Streets       50.0  \n",
+       "Search Party                 22.0  \n",
+       "Nine Lives                   11.0  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rank</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>description</th>\n",
+       "      <th>director</th>\n",
+       "      <th>actors</th>\n",
+       "      <th>year</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>revenue (millions)</th>\n",
+       "      <th>metascore</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Secret in Their Eyes</th>\n",
+       "      <td>996</td>\n",
+       "      <td>Crime,Drama,Mystery</td>\n",
+       "      <td>A tight-knit team of rising investigators, alo...</td>\n",
+       "      <td>Billy Ray</td>\n",
+       "      <td>Chiwetel Ejiofor, Nicole Kidman, Julia Roberts...</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>111</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>27585</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hostel: Part II</th>\n",
+       "      <td>997</td>\n",
+       "      <td>Horror</td>\n",
+       "      <td>Three American college students studying abroa...</td>\n",
+       "      <td>Eli Roth</td>\n",
+       "      <td>Lauren German, Heather Matarazzo, Bijou Philli...</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>94</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>73152</td>\n",
+       "      <td>17.54</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Step Up 2: The Streets</th>\n",
+       "      <td>998</td>\n",
+       "      <td>Drama,Music,Romance</td>\n",
+       "      <td>Romantic sparks occur between two dance studen...</td>\n",
+       "      <td>Jon M. Chu</td>\n",
+       "      <td>Robert Hoffman, Briana Evigan, Cassie Ventura,...</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>98</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>70699</td>\n",
+       "      <td>58.01</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Search Party</th>\n",
+       "      <td>999</td>\n",
+       "      <td>Adventure,Comedy</td>\n",
+       "      <td>A pair of friends embark on a mission to reuni...</td>\n",
+       "      <td>Scot Armstrong</td>\n",
+       "      <td>Adam Pally, T.J. Miller, Thomas Middleditch,Sh...</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>93</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>4881</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nine Lives</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>Comedy,Family,Fantasy</td>\n",
+       "      <td>A stuffy businessman finds himself trapped ins...</td>\n",
+       "      <td>Barry Sonnenfeld</td>\n",
+       "      <td>Kevin Spacey, Jennifer Garner, Robbie Amell,Ch...</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>87</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>12435</td>\n",
+       "      <td>19.64</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 50
   }
  ],
  "metadata": {
