[2 20] update cwiczenie2_pandas.ipynb

--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -4716,6 +4716,238 @@
     }
    ],
    "execution_count": 54
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:44:34.281860Z",
+     "start_time": "2025-11-18T10:44:34.270392Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "result = movies_db.groupby(['genre']).agg({\"year\": \"count\"}).sort_values(by=\"year\", ascending=False)\n",
+    "result = result.rename(columns={\"year\": \"num_movies\"})\n",
+    "result"
+   ],
+   "id": "8ad140e9bf5f6c0f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                          num_movies\n",
+       "genre                               \n",
+       "Action,Adventure,Sci-Fi           50\n",
+       "Drama                             48\n",
+       "Comedy,Drama,Romance              35\n",
+       "Comedy                            32\n",
+       "Drama,Romance                     31\n",
+       "...                              ...\n",
+       "Mystery,Thriller,Western           1\n",
+       "Romance,Sci-Fi,Thriller            1\n",
+       "Romance,Sci-Fi                     1\n",
+       "Sci-Fi,Thriller                    1\n",
+       "Thriller,War                       1\n",
+       "\n",
+       "[207 rows x 1 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_movies</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>genre</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Action,Adventure,Sci-Fi</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drama</th>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comedy,Drama,Romance</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comedy</th>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drama,Romance</th>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mystery,Thriller,Western</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Romance,Sci-Fi,Thriller</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Romance,Sci-Fi</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sci-Fi,Thriller</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thriller,War</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>207 rows × 1 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 55
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:45:56.788488Z",
+     "start_time": "2025-11-18T10:45:56.768730Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "movies_db.groupby('genre').agg(num_movies=(\"year\", \"count\")).sort_values(by=\"num_movies\", ascending=False)",
+   "id": "b73ad3da097e7ca6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                          num_movies\n",
+       "genre                               \n",
+       "Action,Adventure,Sci-Fi           50\n",
+       "Drama                             48\n",
+       "Comedy,Drama,Romance              35\n",
+       "Comedy                            32\n",
+       "Drama,Romance                     31\n",
+       "...                              ...\n",
+       "Mystery,Thriller,Western           1\n",
+       "Romance,Sci-Fi,Thriller            1\n",
+       "Romance,Sci-Fi                     1\n",
+       "Sci-Fi,Thriller                    1\n",
+       "Thriller,War                       1\n",
+       "\n",
+       "[207 rows x 1 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_movies</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>genre</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Action,Adventure,Sci-Fi</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drama</th>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comedy,Drama,Romance</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comedy</th>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drama,Romance</th>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mystery,Thriller,Western</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Romance,Sci-Fi,Thriller</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Romance,Sci-Fi</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sci-Fi,Thriller</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thriller,War</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>207 rows × 1 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 57
   }
  ],
  "metadata": {
