--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -4948,6 +4948,309 @@
     }
    ],
    "execution_count": 57
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:49:48.284714Z",
+     "start_time": "2025-11-18T10:49:48.262243Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "store1 = pd.read_csv(\"data/Store1.csv\")\n",
+    "store2 = pd.read_csv(\"data/Store2.csv\")"
+   ],
+   "id": "b8945c3acdd92840",
+   "outputs": [],
+   "execution_count": 58
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:50:26.418015Z",
+     "start_time": "2025-11-18T10:50:26.408684Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "store1.head()",
+   "id": "7b311f06a74a2654",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Months  Grocery_sales  Stationary_sales\n",
+       "0    Jan             16                57\n",
+       "1    Jan             44               139\n",
+       "2    Jan             15                85\n",
+       "3    Jan             59                 8\n",
+       "4    Jan             36               106"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Months</th>\n",
+       "      <th>Grocery_sales</th>\n",
+       "      <th>Stationary_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>16</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>44</td>\n",
+       "      <td>139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>15</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>59</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>36</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 59
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:50:45.386243Z",
+     "start_time": "2025-11-18T10:50:45.368498Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "store2.tail()",
+   "id": "581357eb356474c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Months  Grocery_sales  Stationary_sales\n",
+       "65    Mar             62                35\n",
+       "66    Mar             40                78\n",
+       "67    Mar             53                75\n",
+       "68    Mar             69                29\n",
+       "69    Mar             31                30"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Months</th>\n",
+       "      <th>Grocery_sales</th>\n",
+       "      <th>Stationary_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>62</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>40</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>53</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>69</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 60
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:53:29.533056Z",
+     "start_time": "2025-11-18T10:53:29.520726Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sales_store1 = (store1[[\"Grocery_sales\", \"Stationary_sales\"]].sum().sum())\n",
+    "sales_store1"
+   ],
+   "id": "771cd90a8ab5a0a8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(6082)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 61
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:57:53.813280Z",
+     "start_time": "2025-11-18T10:57:53.803892Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "month_sales1 = store1.groupby(\"Months\")[[\"Grocery_sales\", \"Stationary_sales\"]].agg(\"sum\").agg(\"sum\", axis=1)\n",
+    "month_sales1"
+   ],
+   "id": "b9b43e40dba37b6d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Months\n",
+       "Feb    1744\n",
+       "Jan    1467\n",
+       "Mar    2871\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:58:06.301738Z",
+     "start_time": "2025-11-18T10:58:06.292582Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "month_sales1a = store1.groupby(\"Months\")[[\"Grocery_sales\", \"Stationary_sales\"]].agg(\"sum\").agg(\"sum\", axis=0)\n",
+    "month_sales1a"
+   ],
+   "id": "d8300c41cb4c4ab0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Grocery_sales       2097\n",
+       "Stationary_sales    3985\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 66
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T10:59:13.646638Z",
+     "start_time": "2025-11-18T10:59:13.639431Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "month_sales1.dtype",
+   "id": "89add4455299e939",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 67
   }
  ],
  "metadata": {
