[2 22] update cwiczenie2_pandas.ipynb

--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -5251,6 +5251,326 @@
     }
    ],
    "execution_count": 67
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T11:23:52.885719Z",
+     "start_time": "2025-11-18T11:23:52.866950Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "store_greater = store1[store1['Stationary_sales'].gt(store2[\"Stationary_sales\"])]",
+   "id": "bbc2c655312fd6ed",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\CSComarch\\AppData\\Local\\Temp\\ipykernel_6284\\605071777.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  store_greater = store1[store1['Stationary_sales'].gt(store2[\"Stationary_sales\"])]\n"
+     ]
+    }
+   ],
+   "execution_count": 68
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T11:24:11.915527Z",
+     "start_time": "2025-11-18T11:24:11.904454Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "store_greater",
+   "id": "a557812b5812b828",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Months  Grocery_sales  Stationary_sales\n",
+       "1     Jan             44               139\n",
+       "2     Jan             15                85\n",
+       "4     Jan             36               106\n",
+       "5     Jan             27               136\n",
+       "6     Jan             74               116\n",
+       "7     Jan             63               142\n",
+       "8     Jan             65               129\n",
+       "9     Jan             12               138\n",
+       "10    Feb             34               112\n",
+       "11    Feb             73               100\n",
+       "12    Feb             45               135\n",
+       "13    Feb             31                13\n",
+       "14    Feb             61                51\n",
+       "16    Feb             20               141\n",
+       "17    Feb             18                72\n",
+       "18    Feb             60               134\n",
+       "19    Feb             62                47\n",
+       "21    Feb             25                75\n",
+       "23    Feb             10               118\n",
+       "25    Mar             72                97\n",
+       "26    Mar             48                63\n",
+       "27    Mar             64                54\n",
+       "28    Mar             14                78\n",
+       "29    Mar             51               104\n",
+       "30    Mar             30               133\n",
+       "33    Mar             66                80\n",
+       "35    Mar             54               111\n",
+       "36    Mar             46               147\n",
+       "37    Mar             43               137\n",
+       "39    Mar             55                50\n",
+       "42    Mar             28                73\n",
+       "44    Mar             57               124\n",
+       "46    Mar             11                86\n",
+       "48    Mar             52                68\n",
+       "49    Mar             29               113"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Months</th>\n",
+       "      <th>Grocery_sales</th>\n",
+       "      <th>Stationary_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>44</td>\n",
+       "      <td>139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>15</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>36</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>27</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>74</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>63</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>65</td>\n",
+       "      <td>129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Jan</td>\n",
+       "      <td>12</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>34</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>73</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>45</td>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>31</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>61</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>20</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>18</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>60</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>62</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>25</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Feb</td>\n",
+       "      <td>10</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>72</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>48</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>64</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>14</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>51</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>30</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>66</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>54</td>\n",
+       "      <td>111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>46</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>43</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>55</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>28</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>57</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>11</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>52</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Mar</td>\n",
+       "      <td>29</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 69
   }
  ],
  "metadata": {
